# sync-games

./: .env.example  .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  RELEASE_NOTES.md  package.json  serverless.yml  tsconfig.json
.github/workflows/: cache-seed.yml  release-desktop.yml  release.yml
apps/savecloud-desktop/: .gitignore  UPDATES.md  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/savecloud-desktop/scripts/: generate-latest-json.ts  make-icon-square.ts
apps/savecloud-desktop/src/: App.css  App.tsx  index.css  main.tsx
apps/savecloud-desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/savecloud-desktop/src-tauri/.cargo/: config.example.toml
apps/savecloud-desktop/src-tauri/capabilities/: default.json
apps/savecloud-desktop/src-tauri/lua/: savecloud-api.lua
apps/savecloud-desktop/src-tauri/src/: handlers.rs  lib.rs  main.rs  process_check.rs  setup.rs
apps/savecloud-desktop/src-tauri/src/commands/: config.rs  config_io.rs  game_exit_sync.rs  game_stats.rs  manifest_search.rs  mod.rs  steam_search.rs  tray_tooltip.rs  watch_sync.rs
apps/savecloud-desktop/src-tauri/src/commands/logs/: command_logs.rs  mod.rs
apps/savecloud-desktop/src-tauri/src/commands/scan/: extensions.rs  filters.rs  mod.rs  paths.rs
apps/savecloud-desktop/src-tauri/src/commands/scan/data/: exclusions.json  extensions.json  paths.json
apps/savecloud-desktop/src-tauri/src/commands/share/: share.rs
apps/savecloud-desktop/src-tauri/src/commands/stats/: mod.rs
apps/savecloud-desktop/src-tauri/src/commands/sync/: api.rs  backup.rs  download.rs  full_backup.rs  mod.rs  models.rs  multipart_upload.rs  path_utils.rs  preview.rs  sync_logger.rs  upload.rs
apps/savecloud-desktop/src-tauri/src/commands/sync/streaming/: mod.rs  multipart.rs  tar_stream.rs  upload_strategy.rs
apps/savecloud-desktop/src-tauri/src/compat/: compare.rs  gpu.rs  gpu_compat.rs  host.rs  mod.rs  parse.rs  types.rs
apps/savecloud-desktop/src-tauri/src/config/: config_cmds.rs  gamification.rs  io.rs  mod.rs  models.rs  paths.rs
apps/savecloud-desktop/src-tauri/src/controller/: actions.rs  mapper.rs  mod.rs  state.rs
apps/savecloud-desktop/src-tauri/src/db/queries/: game_paths.sql  games.sql  operation_history.sql  scan_paths.sql  schema.sql  settings.sql
apps/savecloud-desktop/src-tauri/src/ipc/: handlers.rs
apps/savecloud-desktop/src-tauri/src/manifest/: mod.rs
apps/savecloud-desktop/src-tauri/src/network/: mod.rs
apps/savecloud-desktop/src-tauri/src/plugins/: api.rs  log_buffer.rs  manager.rs  mod.rs  plugin.rs  plugin_sdk.rs
apps/savecloud-desktop/src-tauri/src/sqlite/: connection.rs  error.rs  migrations.rs  mod.rs
apps/savecloud-desktop/src-tauri/src/sqlite/sql/: 001_catalog_init.sql  002_catalog_sync_meta.sql  003_catalog_details_json.sql  004_catalog_trending.sql  005_steam_media_cache.sql
apps/savecloud-desktop/src-tauri/src/steam/: appdetails.rs  mod.rs  path_resolver.rs  steam_search.rs
apps/savecloud-desktop/src-tauri/src/steam_cache/: key.rs  mod.rs  store.rs  types.rs
apps/savecloud-desktop/src-tauri/src/steam_catalog/: api.rs  commands.rs  enrichment.rs  error.rs  meta.rs  mod.rs  query.rs  sync.rs  trending.rs  types.rs
apps/savecloud-desktop/src-tauri/src/steam_catalog/commands/: details.rs  listing.rs  mod.rs  sync.rs  trending.rs
apps/savecloud-desktop/src-tauri/src/system/: game_exit_sync.rs  mod.rs  process_check.rs  watch_sync.rs
apps/savecloud-desktop/src-tauri/src/time/: tracker.rs
apps/savecloud-desktop/src-tauri/src/torrent/: commands.rs  engine.rs  errors.rs  mod.rs  models.rs  state.rs
apps/savecloud-desktop/src-tauri/src/tray/: mod.rs  tray_tooltip.rs
apps/savecloud-desktop/src-tauri/src/utils/: launch_exe.rs  mod.rs  path_utils.rs
apps/sync-games-desktop/: UPDATES.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/sync-games-desktop/scripts/: generate-latest-json.ts  make-icon-square.ts
apps/sync-games-desktop/src/: App.css  App.tsx  index.css  main.tsx
apps/sync-games-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/sync-games-desktop/src-tauri/capabilities/: default.json
apps/sync-games-desktop/src-tauri/icons/: icon.icns
apps/sync-games-desktop/src-tauri/src/: lib.rs  main.rs  process_check.rs  steam.rs  tray_state.rs
apps/sync-games-desktop/src-tauri/src/commands/: config.rs  config_io.rs  game_exit_sync.rs  game_stats.rs  manifest_search.rs  mod.rs  scan.rs  steam_search.rs  sync.rs  tray_tooltip.rs  watch_sync.rs
apps/sync-games-desktop/src-tauri/src/commands/scan/: extensions.rs  filters.rs  mod.rs  paths.rs
apps/sync-games-desktop/src-tauri/src/commands/scan/data/: exclusions.json  extensions.json
apps/sync-games-desktop/src-tauri/src/commands/sync/: api.rs  backup.rs  download.rs  full_backup.rs  mod.rs  models.rs  multipart_upload.rs  sync_logger.rs  upload.rs
apps/sync-games-desktop/src-tauri/src/commands/sync/streaming/: multipart.rs
apps/sync-games-desktop/src-tauri/src/config/: mod.rs
apps/sync-games-desktop/src-tauri/src/steam/: mod.rs  path_resolver.rs
doc/: DEPLOYMENT.md  PLUGINS_DEV.md  RUST_PLUGINS.md
scripts/: build-cli.ts  generate-api-key.ts  generate-updater-json.ts  sync-version.ts
src/application/: index.ts
src/application/use-cases/: AbortMultipartUploadUseCase.ts  CompleteMultipartUploadUseCase.ts  CreateMultipartUploadUseCase.ts  CreateMultipartUploadWithPartUrlsUseCase.ts  DeleteBackupUseCase.ts  GetUploadUrlUseCase.ts  (+9 more)
src/cli/: argv.ts  banner-title.ts  banner.ts  command-mode.ts  constants.ts  container.ts  index.ts  menu.ts  utils.ts
src/domain/: index.ts
src/infrastructure/: index.ts
src/shared/: utils.ts
(+261 files in other folders)
