[package]
name = "savecloud-desktop"
version = "1.6.8"
description = "Sync your game saves to the cloud. Auto-upload on change, local backups before overwrite. Works with Steam, non-Steam, and emulated games."
authors = ["Steven Jaime"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "savecloud_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dotenvy = "0.15"
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking", "stream"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
urlencoding = "2"
futures-util = "0.3"
tauri-plugin-dialog = "2"
notify = "6"
notify-debouncer-mini = "0.4"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
sysinfo = "0.31"
base64 = "0.22"
bytes = "1"
tokio = { version = "1", features = ["sync", "time", "fs", "io-util"] }
rayon = "1"
tar = "0.4"
librqbit = "8.1.1"
tauri-plugin-single-instance = "2.4.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

