[package]
name = "savecloud-desktop"
version = "1.10.1"
description = "Sync your game saves to the cloud. Auto-upload on change, local backups before overwrite. Works with Steam, non-Steam, and emulated games."
authors = ["Steven Jaime"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "savecloud_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dotenvy = "0.15"
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-ico"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
keyring = "2"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking", "stream"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
urlencoding = "2"
futures-util = "0.3"
tauri-plugin-dialog = "2"
notify = "6"
notify-debouncer-mini = "0.4"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
sysinfo = "0.31"
base64 = "0.22"
bytes = "1"
rayon = "1"
tar = "0.4"
librqbit = "8.1.1"
tauri-plugin-single-instance = "2.4.0"
filetime = "0.2.27"
mlua = { version = "0.11", features = ["luajit", "vendored", "serialize", "send"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio = { version = "1", features = ["sync", "time", "fs", "io-util"] }
tokio-util = { version = "0.7.18", features = ["io", "io-util"] }
walkdir = "2.5.0"
thiserror = "2.0.18"
moka = { version = "0.12", default-features = false, features = ["sync"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }


[dev-dependencies]
tempfile = "3.10"

# Windows: WGI (default de gilrs) suele requerir ventana enfocada y puede no emitir en un hilo aparte.
# XInput funciona bien con el bucle en segundo plano (ver gilrs / Windows Gaming Input).
[target.'cfg(windows)'.dependencies]
gilrs = { version = "0.10", default-features = false, features = ["xinput"] }
winreg = "0.52"
windows-sys = { version = "0.59", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
wmi = "0.14"

[target.'cfg(not(windows))'.dependencies]
gilrs = "0.10"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

